src/objects/loan__Transaction_Approval_Config__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Payment_Retry_Interval__c</fullName>
        <label>Payment Retry Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Accounting__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you check this, approval process is enabled for Accounting.</inlineHelpText>
        <label>Accounting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Funding_Reversal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you check this, approval process is enabled for Funding reversal</inlineHelpText>
        <label>Funding Reversal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Funding__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you check this, approval process is enabled for funding. If not, auto approval is activated and payments will be cleared without running the relevant job.</inlineHelpText>
        <label>Funding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Investor_Fund__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you do not check this, the Investor fund transactions will be cleared without running the relevant job</inlineHelpText>
        <label>Investor Fund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Reversal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you check this, approval process is enabled for payment reversals</inlineHelpText>
        <label>Payment Reversal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you do not check this, the payments will be cleared without running the relevant job</inlineHelpText>
        <label>Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Write_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you check this, approval process is enabled for a loan write off.</inlineHelpText>
        <label>Write Off</label>
        <type>Checkbox</type>
    </fields>
    <label>Transaction Approval Config</label>
</CustomObject>